# CPPPractice

./: CMakeLists.txt
main/src/: main.cpp  main.hpp
main/src/KalmanFilterEquations/: KalmanFilterUpdate.cpp  KalmanFilterUpdate.h
main/src/objs/: Student.cpp  Student.hpp
